# sms-chatbot

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  admin-dashboard-build-spec-v2.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  model-evaluation-results.md  model-selection-report.md  pyproject.toml
.github/workflows/: ci.yml
admin/: DEMO.md  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  api.ts  index.css  main.tsx  routeTree.gen.ts  utils.ts
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_admin_ops_multi_tenant_foundations.py
app/: config.py  database.py  main.py
app/api/: __init__.py  admin.py  deps.py  webhooks.py
app/core/: compliance.py  exceptions.py  idempotency.py  logging.py  masking.py  quiet_hours.py  rate_limit.py
app/models/: __init__.py  admin_user.py  appointment.py  audit_event.py  availability.py  campaign.py  campaign_recipient.py  contact.py  conversation.py  message.py  reminder_workflow.py  tenant.py  waitlist_entry.py
app/schemas/: __init__.py  appointment.py  campaign.py  contact.py  health.py  message.py
deploy/: sms-chatbot.service
docs/: privacy-policy.md  production-runbook.md  sms-chatbot-blueprint-v2.md  sms-consent-and-terms.md
scripts/: deploy_prod.sh  evaluate_models.py  healthcheck_prod.sh  seed_availability.py
tests/: test_ai_service.py  test_booking.py  test_campaign.py  test_compliance.py  test_conversation.py  test_integration_inbound.py  test_rate_limit.py  test_reminders.py  test_sms_webhook.py
(+61 files in other folders)
